@@ -24,7 +24,7 @@ debug = False
 
 class SharedInfo(object):
 
-	__shared_state = { 'client_state': {}, 'last_visitor': "", 'clients': [], 'profiles': [], 'install_profile': None, 'client_profile':None, 'temp_use': "", 'devices':None, 'drive_to_partition':"" }
+	__shared_state = { 'client_state': {}, 'last_visitor': "", 'clients': [], 'profiles': [], 'install_profile': None, 'client_profile':None, 'temp_use': "", 'devices':None, 'drive_to_partition':"", 'do_recommended_error': "" }
 
 	def __init__(self):
 		self.__dict__ = self.__shared_state
