@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.467 2005/11/07 19:37:16 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.468 2005/11/08 01:50:08 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
@@ -12,6 +12,7 @@
   radio buttons and pretty display work together
   META redirect instead of javascript
   pretty display stretches across entire screen
+  'Recommended layout' and 'Clear drive' functions
 
   6 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIStorageDevice.py:
